# EECS-back

./: .gitignore  LICENSE  README.md  openapi.yaml  pyproject.toml  template.yaml
.github/workflows/: delete_stack_on_pr_close.yaml  delete_stack_template.yaml  deploy_job_template.yaml  deploy_main.yaml  deploy_when_PR.yaml
app/cron_job/: all_desk_unregistration.py
app/desks/: delete.py  gets.py  post.py  put.py
app/seat/: delete.py  post.py  put.py
layer/: responses.py  table_utils.py
